# climate-risk-map

./: .gitattributes  .gitignore  Dockerfile  README.md  climate-risk-map.code-workspace  package.json  tsconfig.json  variable name mappings.tsv
backend/: .env.template  Cargo.toml  Procfile  README.md  init_db.sh  sqlx-data.json
backend/migrations/: 20210526153724_setup-tables.sql  20210603214656_add-counties-and-states.sql  20210603215110_prepopulate-data-categories.sql  20210603215943_prepopulate-color-palettes.sql  20210603220604_prepopulate-scale-types.sql  20210604010521_prepopulate-map-types.sql  20210604010725_prepopulate-formatter-types.sql  20210604014139_prepopulate-data-source.sql  20210604022014_prepopulate-datasets.sql  20210604162308_prepopulate-map-visualizations.sql  20210604223432_prepopulate-map-visualization-collections.sql  20210604224346_prepopulate-scale-domain.sql  20210608175736_prepopulate-county-data-02.sql  20210709190952_update_data_category_fk.sql  20210719211334_edit_map_visualizations.sql  20210720172946_add-default-year-and-dataset.sql  20210721193840_create-pdf-domain-table.sql  20210723234438_set-default-sources.sql  20210724003917_modify-risk-metrics-tab.sql  20210804174521_modify-map-visualizations.sql  20210804184809_modify-data.sql  20210820144737_change-default-data-source-fk.sql  20210909180810_fix-bugs.sql  20211117184226_health-and-energy-datasets.sql  20211118023035_health-and-energy-visualizations.sql  20211124200803_health-and-energy-data.sql  20211125012840_add-health-category.sql  20211125013105_put-health-and-energy-data-in-categories.sql  20211125032055_add-risk-metrics.sql  20211201145446_rename-flood-risk.sql  (+63 more)
(+315 files in other folders)
