[package]
authors = ["Cypress Frankenfeld <iamcypress@gmail.com>"]
edition = "2018"
name = "climate_risk_map"
version = "0.1.0"

[dependencies]
actix-web = "3"
chrono = {version = "0.4", features = ["serde"]}
csv = "1.1"
dotenv = "0.14"
futures = "0.3.17"
serde = "1.0.126"
sqlx = {version = "0.5", features = ["postgres", "runtime-async-std-native-tls", "chrono"]}
