[package]
authors = ["Cypress Frankenfeld <iamcypress@gmail.com>"]
edition = "2018"
name = "climate_risk_map"
version = "0.1.0"
license = "GPL-3.0-or-later"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
dotenv = "0.14"
futures = "0.3.17"
serde = "1.0.126"
serde_json = "1.0.79"
sqlx = { version = "0.6", features = [
    "postgres",
    "runtime-async-std-rustls",
    "chrono",
] }
log = "0.4"
env_logger = "0.9"
awmp = "0.8.1"
derivative = "2.2.0"
derive_more = { version = "0.99.17", default-features = false, features = [
    "display",
] }
str_slug = "0.1.3"

[dev-dependencies]
assert_matches = "1.5"
